# organizer

./: README.md  pyproject.toml
organizer_app/: __init__.py  agent.py  cli.py  config.py  main.py  models.py  storage.py
organizer_app/static/: style.css
organizer_app/templates/: index.html
