[project]
name = "local-organizer"
version = "0.1.0"
description = "Local-first organizer for notes, meeting capture, and agent processing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
organizer-dev = "organizer_app.main:run_dev"
organizer = "organizer_app.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["organizer_app*"]
